# Weered

./: .gitignore  .npmrc  .prettierignore  CLAUDE.md  CONTRIBUTING.md  Caddyfile.weered  DEPLOY.md  DEVELOPMENT.md  DockBanOverlay.tsx.LINED.now.txt  DockShell.tsx.LINED.now.txt  DockShell.tsx.LINED.txt  LICENSE  LICENSING.md  OFFICE.md  README.md  RUNBOOK.md  SCALING.md  SECURITY.md  SOVEREIGNTY.md  WebSocket_Refs.txt  _auth_guard_provider_fix_v3.ps1  _deblue_patch.ps1  _fix_layout_provider_import.ps1  _mojibake_scrub_ui.ps1  _patch_lastroom.ps1  _patch_layout_v1.ps1  _patch_log.txt  _repair_lobby_page.ps1  _scrub_ui_punct.ps1  _ui_blanket_pages_v3.ps1  _ui_blanket_pages_v4.ps1  _ui_blanket_pages_v5.ps1  _ui_blanket_pages_v5_full.ps1  _ui_blanket_v1.ps1  _ui_patch2_rails.ps1  _ui_patch2b_chatpanel.ps1  _ui_patch4_base_layout.ps1  _ui_patch5_dock_drawer.ps1  _ui_write_pages_v2c.ps1  _weered_api_probe.txt  (+39 more)
.build/: queue.jsonl
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md
.next/: trace
_ui_backup_20260228_082634/: apps_web_app_globals.css  apps_web_app_layout.tsx  apps_web_components_DockDrawer.tsx  apps_web_components_LeftRail.tsx  apps_web_components_RightRail.tsx  apps_web_components_RightRailSwitch.tsx  apps_web_components_WeeredProvider.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
scripts/: check.sh  deploy.sh  foyer-link.sh  host-link.sh  office-link.sh  oversized-baseline.txt  (+3 more)
(+1086 files in other folders)
